readme, ci naming

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,6 @@
-name: Docker Image CI
+name: Deploy to Docker Hub
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
