--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,8 @@ name: Deploy to Docker Hub
 
 on:
   pull_request:
-    branches: [ master ]
+    types: [closed]
+    branches: [master]
 
 jobs:
 
@@ -31,3 +32,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/flutter-workspace:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/flutter-workspace:latest
+          cache-to: type=inline
